--- a/Food-Blog-main/Food-Blog-main/index.html
+++ b/Food-Blog-main/Food-Blog-main/index.html
@@ -25,7 +25,7 @@
     <a href="#" class="logo"> <i class=""></i> FooYes </a>
 
     <nav class="navbar">
-        <a href="../../chef-main/index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="../../chef-page-main/chef.html">Chefs</a>
         <a href="../../Food-Blog-main/Food-Blog-main/index.html">Blog</a>
         <a href="../../Help-and-Suppot-main/index.html">Service</a>
